name:                hangman
version:             0.1.0.0
synopsis:            Hangman command line application
description:         Please see README.md
homepage:            https://github.com/joshuaclayton/hangman#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2016 Josh Clayton
category:            Web
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hangman.RandomWord
                     , Hangman.Puzzle
                     , Hangman.Puzzle.Show
  build-depends:       base >= 4.7 && < 5
                     , random == 1.1
  default-language:    Haskell2010

executable hangman-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , hangman
  default-language:    Haskell2010

test-suite hangman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hangman
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hangman
